Simplified Code/App.  PHAccessPointListActivity now merged into PHHomeActivity for simplification (now only 1 main PHSDKListener). Removed unused layouts.

--- a/QuickStartApp/res/layout/home.xml
+++ b/QuickStartApp/res/layout/home.xml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:theme="@android:style/Theme.Dialog"
+    android:id="@+id/linear1"
+    android:minWidth="300dp" >
 
-    <ListView
-        android:id="@+id/list_bridges"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginLeft="2dip"
-        android:layout_marginRight="2dip"
-        android:layout_marginTop="3dip"
-        android:layout_weight="1"
-        android:cacheColorHint="#00000000"
-        android:choiceMode="singleChoice"
-        android:dividerHeight="3sp"
-        android:focusable="true" />
 
     <TextView
         android:id="@+id/empty_list_view"
@@ -24,13 +17,20 @@
         android:layout_weight="1"
         android:gravity="center"
         android:text="@string/no_bridge"
-        android:visibility="gone" />
+       />
 
-    <include
-        android:id="@+id/includeVersion"
+        <ListView
+        android:id="@+id/bridge_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        layout="@layout/footer"
-        android:visibility="gone" />
+        android:layout_weight="1"
+        android:cacheColorHint="#00000000" 
+    	android:focusable="true"
+    	android:choiceMode="singleChoice" 
+    	android:dividerHeight="3sp"  
+    	android:layout_marginLeft="2dip"
+		android:layout_marginRight="2dip"
+		android:layout_marginTop="3dip" >
+    </ListView>
 
 </LinearLayout>
