Fixed the logic for performing an IP Scan and minor cosmetic improvements.

--- a/QuickStartApp/res/layout/bridgelistlinear.xml
+++ b/QuickStartApp/res/layout/bridgelistlinear.xml
@@ -35,7 +35,7 @@
         android:singleLine="true"
         android:text="@string/txt_select_smartbridge"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="#FFFFFFFF" />
+        android:textColor="#000" />
 
    
 
